<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.myapplication.ui.home.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search"
        />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.example.myapplication.ui.gallery.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_translate"
        android:name="com.example.myapplication.ui.slideshow.TranslateFragment"
        android:label="@string/menu_translate"
        tools:layout="@layout/fragment_translate" />

    <fragment
        android:id="@+id/nav_translation"
        android:name="com.example.myapplication.ui.translation.TranslationFragment"
        android:label="@string/menu_translation"
        tools:layout="@layout/fragment_translation" />
</navigation>