<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_48px"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/star_selector"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/translate_48px"
            android:title="@string/menu_translate" />
<!--        <item-->
<!--            android:id="@+id/nav_translation"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_translation" />-->
    </group>
</menu>