<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.SearchFragment"
    android:orientation="vertical"
    style="@style/linear_layout_df"
    >

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="5dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0">-->

<!--        <TextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/need_transl"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold|italic"-->
<!--            android:textColor="@color/black"-->
<!--            />-->

        <TextView
            android:id="@+id/textViewQuickTransl"
            android:text="@string/quick_transl"
            style="@style/text_bold"
            />

        <LinearLayout
            android:baselineAligned="false"
            style="@style/text_df_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45">

                <Spinner
                    android:id="@+id/spinnerFrom"
                    style="@style/spinner_df"
                    android:contentDescription="@string/hint_translate_from"
                    android:entries="@array/lang_items" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/text_df"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center"
                    android:text="@string/from_to" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45">

                <Spinner
                    android:id="@+id/spinnerTo"
                    style="@style/spinner_df"
                    android:contentDescription="@string/hint_translate_to"
                    android:entries="@array/lang_items" />

            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/editTextWordToTransl"
            android:inputType="text"
            android:hint="@string/word_to_translate"
            style="@style/text_df_margin"
            />
</LinearLayout>