<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/linear_layout_df"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/word_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="original_word"
        style="@style/text_df_margin"
        />

        <ImageView
            android:id="@+id/search_imgview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:minHeight="32dp"
            android:minWidth="32dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="translation"
        style="@style/text_df_margin"
        android:textColor="@color/light_gray"
        />

    <TextView
        android:id="@+id/syns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synonyms"
        style="@style/text_df_margin"
        />

    <TextView
        android:id="@+id/ants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/antonyms"
        style="@style/text_df_margin"
        />

    <TextView
        android:id="@+id/context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contexts"
        style="@style/text_df_margin"
        />
    <TextView
        style="@style/line_under_item"
        />
</LinearLayout>